@@ -1,3 +1,8 @@
+2004-12-08  Bruno Haible  <bruno@clisp.org>
+
+	* pathname.d (use_default_dir): Fix GC-safety bug introduced on
+	2002-01-09.
+
 2004-12-05  Bruno Haible  <bruno@clisp.org>
 
 	* stream.d (FILE-POSITION): Fix GC-safety bug introduced on 2004-02-15.
